corte nos dados

--- a/EOG/prepare.ipynb
+++ b/EOG/prepare.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +18,7 @@
        "((28, 1000, 4), (28, 1000, 4))"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -27,6 +27,7 @@
     "import numpy as np\n",
     "from scipy import signal\n",
     "import matplotlib.pyplot as plt\n",
+    "from scipy.signal import stft\n",
     "\n",
     "data1 = np.load('datasets/Gabi.npy')\n",
     "data2 = np.load('datasets/Jesse.npy')\n",
@@ -36,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +104,7 @@
        "(2, 28, 2, 1000)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -169,55 +170,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " (2, 28, 2, 1000)\n",
-      "Formato (shape) dos dados depois da divisão de janelas\n",
-      "Dominio do tempo: (2, 28, 33, 2, 64) - (classes, ensaios, canais, janelas, linhas)\n",
-      "Dominio da frequência:  (2, 28, 33, 2, 33) - (classes, ensaios, canais, janelas, linhas)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
-    "# Aplicação segmentação\n",
-    "data = filtered_data\n",
-    "\n",
-    "step = 29\n",
-    "segment = 64\n",
-    "print('', data.shape)\n",
-    "\n",
-    "n_win = int((data.shape[-1] - segment) / step) + 1\n",
-    "ids = np.arange(n_win) * step\n",
-    "\n",
-    "# Janelas do dado no dominio do tempo\n",
-    "chunks_time = np.array([data[:,:,:,k:(k + segment)] for k in ids]).transpose(1, 2, 0, 3, 4)\n",
-    "\n",
-    "# Janelas do dado no domínio da frequência\n",
-    "_, _, chunks_freq = signal.stft(data, fs=200, nperseg=segment, noverlap=32)\n",
-    "chunks_freq = np.swapaxes(chunks_freq, 2, 3)\n",
-    "\n",
-    "print('Formato (shape) dos dados depois da divisão de janelas')\n",
-    "print(f'Dominio do tempo: {chunks_time.shape} - (classes, ensaios, canais, janelas, linhas)')\n",
-    "print(f'Dominio da frequência:  {chunks_freq.shape} - (classes, ensaios, canais, janelas, linhas)')"
+    "# Corte dos dados\n",
+    "data = filtered_data[:, :, :, 150:800] "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(28, 33, 2, 33) (28, 33, 2, 33)\n",
-      "(28, 33, 2, 64) (28, 33, 2, 64)\n"
+      " (2, 28, 2, 650)\n",
+      "Formato (shape) dos dados depois da divisão de janelas\n",
+      "Dominio do tempo: (2, 28, 2, 22, 64) - (classes+ensaios, canais, janelas, linhas)\n",
+      "Dominio da frequência:  (2, 28, 2, 22, 33) - (classes+ensaios, canais, janelas, linhas)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Teste Desafio\n",
+    "segment = 64\n",
+    "nperseg_freq = 64\n",
+    "print('', data.shape)\n",
+    "\n",
+    "overlap_time = 0  # Iniciando com sobreposição zero no domínio do tempo\n",
+    "overlap_freq = nperseg_freq // 2  # Sobreposição de 50% no domínio da frequência\n",
+    "\n",
+    "while True:\n",
+    "    # Cálculo de n_win e criação de ids\n",
+    "    n_win = int((data.shape[-1] - segment) / (overlap_time + 1)) + 1\n",
+    "    ids = np.arange(n_win) * (overlap_time + 1)\n",
+    "\n",
+    "    # Janelas no domínio do tempo\n",
+    "    chunks_time = [data[:, :, :, k:(k + segment)] for k in ids]\n",
+    "    chunks_time = np.array(chunks_time).transpose(1, 2, 3, 0, 4)\n",
+    "\n",
+    "    # Janelas no domínio da frequência\n",
+    "    _, _, chunks_freq = stft(data, fs=200, nperseg=nperseg_freq, noverlap=overlap_freq)\n",
+    "    chunks_freq = chunks_freq.transpose(0, 1, 2, 4, 3)\n",
+    "\n",
+    "    # Verificando se o número de janelas é o mesmo\n",
+    "    if chunks_time.shape[3] == chunks_freq.shape[3]:\n",
+    "        break  # Se o número de janelas for igual, saia do loop\n",
+    "    else:\n",
+    "        overlap_time += 1  # Incrementa a sobreposição no domínio do tempo para tentar igualar o número de janelas\n",
+    "\n",
+    "print('Formato (shape) dos dados depois da divisão de janelas')\n",
+    "print(f'Dominio do tempo: {chunks_time.shape} - (classes+ensaios, canais, janelas, linhas)')\n",
+    "print(f'Dominio da frequência:  {chunks_freq.shape} - (classes+ensaios, canais, janelas, linhas)')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(28, 2, 22, 33) (28, 2, 22, 33)\n",
+      "(28, 2, 22, 64) (28, 2, 22, 64)\n"
      ]
     }
    ],
