--- a/EOG/prepare.ipynb
+++ b/EOG/prepare.ipynb
@@ -74,9 +74,6 @@
    "outputs": [],
    "source": [
     "# Funções para aplicação dos filtros temporais\n",
-    "%matplotlib inline\n",
-    "from scipy import signal\n",
-    "\n",
     "def butter_bandpass(data, lowcut, highcut, fs=512, order=4):\n",
     "    nyq = fs * 0.5\n",
     "    low = lowcut / nyq\n",
@@ -195,6 +192,7 @@
     }
    ],
    "source": [
+    "# Segmentação e janelas\n",
     "segment = 64\n",
     "nperseg_freq = 64\n",
     "print('', data.shape)\n",
