--- a/EOG/validation.ipynb
+++ b/EOG/validation.ipynb
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,17 +137,13 @@
     "    ''' definição da função PSD para o sinal no domínio da frequência '''\n",
     "    return np.abs(w) ** 2\n",
     "\n",
-    "def sign(x):\n",
-    "    return x[:-1] * x[1:]\n",
-    "\n",
     "def func_j(w):\n",
     "    sample_rate = np.arange(1, w.shape[-1]+1) * 200\n",
     "    return sample_rate / 2 * w.shape[-1]\n",
     "\n",
     "# funções de extração de características\n",
-    "def wamp(x, threshold):\n",
-    "    differences = np.abs(np.diff(x))\n",
-    "    return np.sum(differences > threshold, axis=-1)\n",
+    "def wamp(time, threshold):\n",
+    "    return np.sum(np.abs(np.diff(time)) > threshold, axis=-1)\n",
     "\n",
     "def var(x):\n",
     "    return np.sum(x ** 2, axis=-1) / (np.prod(x.shape) - 1)\n",
@@ -156,10 +152,10 @@
     "    return np.sqrt(np.sum(np.abs(x) ** 2, axis=-1) / (np.prod(x.shape) - 1))\n",
     "\n",
     "def wl(x):\n",
-    "    return np.sum(np.abs(np.diff(x), axis=-1), axis=-1)\n",
+    "    return np.sum(np.abs(np.diff(x, axis=-1)), axis=-1)\n",
     "\n",
     "def zc(x):\n",
-    "    return np.sum(sign(x) <= 0, axis=-1)\n",
+    "    return np.count_nonzero(np.diff(np.sign(x), axis=-1) != 0, axis=-1)\n",
     "\n",
     "def log_det(x):\n",
     "    from math import e\n",
@@ -201,89 +197,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape dos vetores orinais (28, 33, 2, 33) (28, 33, 2, 64)\n"
+      "Shape dos vetores orinais (28, 2, 22, 64) (28, 2, 22, 33)\n",
+      "(28, 2, 22) (28, 2, 22) (28, 2, 22) (28, 2, 22) (28, 2, 22) (28, 2, 22) (28, 2, 22) (28, 2, 22) (28, 2, 22)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "((28, 33, 2), (28, 33, 2), (28, 33, 2), (28, 33, 2))"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "\n",
-    "# Carregando dados dos participantes\n",
-    "x1 = np.load(\"datasets/p1_freq.npy\")\n",
-    "w1 = np.load(\"datasets/p1_time.npy\")\n",
+    "# Carregando dados do participante 1\n",
+    "x1 = np.load(\"datasets/p1_time.npy\")\n",
+    "w1 = np.load(\"datasets/p1_freq.npy\")\n",
     "\n",
-    "x1 = np.load(\"datasets/p2_freq.npy\")\n",
-    "w1 = np.load(\"datasets/p2_time.npy\")\n",
+    "# Extraindo características do participante 1\n",
+    "data_wamp1 = wamp(x1, np.median(x1))\n",
+    "data_var1 = var(x1)\n",
+    "data_rms1 = rms(x1)\n",
+    "data_wl1 = wl(x1)\n",
+    "data_zc1 = zc(x1)\n",
+    "\n",
+    "data_fmd1 = fmd(w1)\n",
+    "data_fmn1 = fmn(w1)\n",
+    "data_mmdf1 = mmdf(w1)\n",
+    "data_mmnf1 = mmnf(w1)\n",
     "\n",
     "print(\"Shape dos vetores orinais\", x1.shape, w1.shape)\n",
     "\n",
-    "data_var = var(x1)\n",
-    "data_rms = rms(x1)\n",
-    "\n",
-    "data_fmd = fmd(w1)\n",
-    "data_mmdf = mmdf(w1)\n",
-    "\n",
-    "data_var.shape, data_rms.shape, data_fmd.shape, data_mmdf.shape\n",
-    "#56, 2, 33"
+    "print(data_wamp1.shape, data_var1.shape, data_rms1.shape, data_wl1.shape, data_zc1.shape, data_fmd1.shape, data_fmn1.shape, data_mmdf1.shape, data_mmnf1.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(4, 28, 33, 2)"
+       "(9, 28, 2, 22)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# União do vetor de características inicial (concatenação de data)\n",
+    "# União do vetor de características inicial (concatenação de data) para o participante 1\n",
     "\n",
-    "features = np.array([data_var, data_rms, data_fmd, data_mmdf])\n",
+    "features = np.array([data_wamp1, data_var1, data_rms1, data_wl1, data_zc1, data_fmd1, data_fmn1, data_mmdf1, data_mmnf1])\n",
     "features.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(56, 132)"
+       "(616, 18)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Organização das dimensões 56, 33, 4, 2\n",
+    "# Organização das dimensões\n",
     "features = features.transpose(1, 3, 0, 2)\n",
     "\n",
     "# Criar vetor de características definitivo\n",
@@ -294,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -319,33 +308,6 @@
     "\n",
     "# criação do vetor de labels final\n",
     "y = np.repeat(labels_num, int(features.shape[0] / len(labels_num)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Aplicar normalização dos dados utilizando ferramentas já conhecidas"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Seleção de característica"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Classificação"
    ]
   }
  ],
