--- a/EOG/validation.ipynb
+++ b/EOG/validation.ipynb
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
        "(9, 28, 2, 22)"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
        "(616, 18)"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -308,6 +308,213 @@
     "\n",
     "# criação do vetor de labels final\n",
     "y = np.repeat(labels_num, int(features.shape[0] / len(labels_num)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Normalização dos dados"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "scaler = MinMaxScaler()\n",
+    "X = scaler.fit_transform(features)\n",
+    "y = scaler.fit_transform(y.reshape(-1, 1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Classificação utilizando SVM padrão"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Acurácia do modelo: 23.39%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Utilizando SVM padrão\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.svm import SVC\n",
+    "import numpy as np\n",
+    "\n",
+    "# Criando os rótulos usando np.repeat\n",
+    "y = np.repeat(labels_num, int(features.shape[0] / len(labels_num)))\n",
+    "\n",
+    "# Divisão dos dados em conjunto de treino e teste (opcional)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Criando e treinando o modelo SVM\n",
+    "svm_model = SVC(kernel='linear')  # Você pode escolher o tipo de kernel desejado\n",
+    "svm_model.fit(X_train, y_train)\n",
+    "\n",
+    "# Avaliando o modelo (opcional)\n",
+    "accuracy = svm_model.score(X_test, y_test)\n",
+    "print(f'Acurácia do modelo: {accuracy * 100:.2f}%')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Classificação utilizando Grid Search e seleção de características"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best accuracy: 0.34415584415584416\n",
+      "Best parameters: {'C': 10, 'gamma': 1, 'kernel': 'poly'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Utilizando Grid Search com SVM e seleção de características\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
+    "from sklearn.feature_selection import SelectKBest, f_regression\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn import svm, metrics\n",
+    "import numpy as np\n",
+    "\n",
+    "max_k = X.shape[1]\n",
+    "start = int(max_k / 2)\n",
+    "end = max_k + 1\n",
+    "\n",
+    "best_acc = 0\n",
+    "best_params = None\n",
+    "\n",
+    "for k in range(start, end):\n",
+    "    X_new = SelectKBest(f_regression, k=k).fit_transform(X, y)\n",
+    "    x_train, x_test, y_train, y_test = train_test_split(X_new, y, test_size=0.25, random_state=42)\n",
+    "\n",
+    "    param_grid = [\n",
+    "        {'C': [0.1, 1, 10, 100, 1000], 'kernel': ['linear']},\n",
+    "        {'C': [0.1, 1, 10, 100], 'gamma': [1, 0.1, 0.01, 0.001], 'kernel': ['linear', 'rbf', 'poly']},\n",
+    "    ]\n",
+    "\n",
+    "    grid = GridSearchCV(svm.SVC(), param_grid, cv=5)\n",
+    "    grid.fit(x_train, y_train)\n",
+    "\n",
+    "    # Predição\n",
+    "    y_pred = grid.predict(x_test)\n",
+    "    current_acc = metrics.accuracy_score(y_test, y_pred)\n",
+    "\n",
+    "    if current_acc > best_acc:\n",
+    "        best_acc = current_acc\n",
+    "        best_params = grid.best_params_\n",
+    "\n",
+    "print(\"Best accuracy:\", best_acc)\n",
+    "print(\"Best parameters:\", best_params)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Classificação utilizando validação cruzada"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Acurácia média: 21.10%\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.model_selection import StratifiedKFold\n",
+    "\n",
+    "# Dividindo os dados normalizados em 4 conjuntos (folds) para validação cruzada\n",
+    "cv = StratifiedKFold(n_splits=4)\n",
+    "\n",
+    "# Lista para armazenar as acurácias para cada fold\n",
+    "acc_scores = []\n",
+    "\n",
+    "# Loop pelos folds\n",
+    "for train_idx, test_idx in cv.split(X, y):\n",
+    "    # Divida os dados normalizados em conjunto de treinamento e conjunto de teste para este fold\n",
+    "    X_train, X_test = X[train_idx], X[test_idx]\n",
+    "    y_train, y_test = y[train_idx], y[test_idx]\n",
+    "\n",
+    "    # Treine o modelo SVM no conjunto de treinamento\n",
+    "    svm_model.fit(X_train, y_train)\n",
+    "\n",
+    "    # Faça previsões no conjunto de teste\n",
+    "    y_pred = svm_model.predict(X_test)\n",
+    "\n",
+    "    # Calcule a acurácia do modelo para este fold\n",
+    "    fold_accuracy = accuracy_score(y_test, y_pred)\n",
+    "\n",
+    "    # Armazene a acurácia deste fold na lista\n",
+    "    acc_scores.append(fold_accuracy)\n",
+    "\n",
+    "mean_acc = np.mean(acc_scores)\n",
+    "\n",
+    "# Imprima a média\n",
+    "print(f\"Acurácia média: {mean_acc:.2%}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Classificação com RFE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Acurácia: 24.32%\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.feature_selection import RFE\n",
+    "\n",
+    "rfe = RFE(svm.SVC(kernel=\"linear\"), step=0.0001, n_features_to_select=500)\n",
+    "X_final = rfe.fit_transform(X, y)\n",
+    "x_train, x_test, y_train, y_test = train_test_split(X_final, y, test_size=0.3, random_state=42)\n",
+    "clf = SVC(kernel='linear', C=1, random_state=42, probability=True)\n",
+    "clf.fit(x_train, y_train)\n",
+    "y_pred = clf.predict(x_test)\n",
+    "print(f\"Acurácia: {accuracy_score(y_test, y_pred):.2%}\")"
    ]
   }
  ],
