--- a/EOG/validation.ipynb
+++ b/EOG/validation.ipynb
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,13 +191,15 @@
     "|    ...    |  ... |  ... |  ... |  ...  | ...  | ...  | ...  | ...   |   ...  |\n",
     "|     N     |  vN  |  vN  |  vN  |   vN  | vN   | vN   | vN   | vN    |    7   |\n",
     "\n",
+    "\n",
+    "### Participante 1\n",
     "#### Implementação do vetor\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +245,7 @@
        "(9, 28, 2, 22)"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +268,7 @@
        "(616, 18)"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -502,6 +504,336 @@
      "output_type": "stream",
      "text": [
       "Acurácia: 24.32%\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.feature_selection import RFE\n",
+    "\n",
+    "rfe = RFE(svm.SVC(kernel=\"linear\"), step=0.0001, n_features_to_select=500)\n",
+    "X_final = rfe.fit_transform(X, y)\n",
+    "x_train, x_test, y_train, y_test = train_test_split(X_final, y, test_size=0.3, random_state=42)\n",
+    "clf = SVC(kernel='linear', C=1, random_state=42, probability=True)\n",
+    "clf.fit(x_train, y_train)\n",
+    "y_pred = clf.predict(x_test)\n",
+    "print(f\"Acurácia: {accuracy_score(y_test, y_pred):.2%}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Participante 2\n",
+    "#### Implementação do vetor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape dos vetores orinais (28, 2, 22, 64) (28, 2, 22, 33)\n",
+      "(28, 2, 22) (28, 2, 22) (28, 2, 22) (28, 2, 22) (28, 2, 22) (28, 2, 22) (28, 2, 22) (28, 2, 22) (28, 2, 22)\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Carregando dados do participante 1\n",
+    "x2 = np.load(\"datasets/p2_time.npy\")\n",
+    "w2 = np.load(\"datasets/p2_freq.npy\")\n",
+    "\n",
+    "# Extraindo características do participante 1\n",
+    "data_wamp2 = wamp(x2, np.median(x2))\n",
+    "data_var2 = var(x2)\n",
+    "data_rms2 = rms(x2)\n",
+    "data_wl2 = wl(x2)\n",
+    "data_zc2 = zc(x2)\n",
+    "\n",
+    "data_fmd2 = fmd(w2)\n",
+    "data_fmn2 = fmn(w2)\n",
+    "data_mmdf2 = mmdf(w2)\n",
+    "data_mmnf2 = mmnf(w2)\n",
+    "\n",
+    "print(\"Shape dos vetores orinais\", x2.shape, w2.shape)\n",
+    "\n",
+    "print(data_wamp2.shape, data_var2.shape, data_rms2.shape, data_wl2.shape, data_zc2.shape, data_fmd2.shape, data_fmn2.shape, data_mmdf2.shape, data_mmnf2.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(9, 28, 2, 22)"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# União do vetor de características inicial (concatenação de data) para o participante 1\n",
+    "\n",
+    "features = np.array([data_wamp2, data_var2, data_rms2, data_wl2, data_zc2, data_fmd2, data_fmn2, data_mmdf2, data_mmnf2])\n",
+    "features.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(616, 18)"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Organização das dimensões\n",
+    "features = features.transpose(1, 3, 0, 2)\n",
+    "\n",
+    "# Criar vetor de características definitivo\n",
+    "features = features.reshape(features.shape[0] * features.shape[1], features.shape[2] * features.shape[3])\n",
+    "\n",
+    "features.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 2, 3, 3, 1, 0, 3, 0, 0, 1, 2, 3, 2, 1, 0, 2, 1, 3, 1, 0, 1, 2, 0, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "labels_str = ['dir', 'esq', 'cima', 'baixo', 'cima', 'baixo',\n",
+    "'baixo', 'esq', 'dir', 'baixo', 'dir', 'dir', 'esq', 'cima',\n",
+    "'baixo', 'cima', 'esq', 'dir', 'cima', 'esq', 'baixo', 'esq',\n",
+    "'dir', 'esq', 'cima', 'dir', 'cima', 'baixo']\n",
+    "\n",
+    "# transformando para numérico\n",
+    "lab_dict = {'dir': 0, 'esq': 1, 'cima': 2, 'baixo': 3}\n",
+    "labels_num = [lab_dict[item] for item in labels_str]\n",
+    "\n",
+    "print(labels_num)\n",
+    "\n",
+    "# criação do vetor de labels final\n",
+    "y = np.repeat(labels_num, int(features.shape[0] / len(labels_num)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Normalização dos dados"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "scaler = MinMaxScaler()\n",
+    "X = scaler.fit_transform(features)\n",
+    "y = scaler.fit_transform(y.reshape(-1, 1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Classificação utilizando SVM padrão"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Acurácia do modelo: 23.39%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Utilizando SVM padrão\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.svm import SVC\n",
+    "import numpy as np\n",
+    "\n",
+    "# Criando os rótulos usando np.repeat\n",
+    "y = np.repeat(labels_num, int(features.shape[0] / len(labels_num)))\n",
+    "\n",
+    "# Divisão dos dados em conjunto de treino e teste (opcional)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Criando e treinando o modelo SVM\n",
+    "svm_model = SVC(kernel='linear')  # Você pode escolher o tipo de kernel desejado\n",
+    "svm_model.fit(X_train, y_train)\n",
+    "\n",
+    "# Avaliando o modelo (opcional)\n",
+    "accuracy = svm_model.score(X_test, y_test)\n",
+    "print(f'Acurácia do modelo: {accuracy * 100:.2f}%')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Classificação utilizando Grid Search e seleção de características"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best accuracy: 0.35064935064935066\n",
+      "Best parameters: {'C': 100, 'gamma': 1, 'kernel': 'rbf'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Utilizando Grid Search com SVM e seleção de características\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
+    "from sklearn.feature_selection import SelectKBest, f_regression\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn import svm, metrics\n",
+    "import numpy as np\n",
+    "\n",
+    "max_k = X.shape[1]\n",
+    "start = int(max_k / 2)\n",
+    "end = max_k + 1\n",
+    "\n",
+    "best_acc = 0\n",
+    "best_params = None\n",
+    "\n",
+    "for k in range(start, end):\n",
+    "    X_new = SelectKBest(f_regression, k=k).fit_transform(X, y)\n",
+    "    x_train, x_test, y_train, y_test = train_test_split(X_new, y, test_size=0.25, random_state=42)\n",
+    "\n",
+    "    param_grid = [\n",
+    "        {'C': [0.1, 1, 10, 100, 1000], 'kernel': ['linear']},\n",
+    "        {'C': [0.1, 1, 10, 100], 'gamma': [1, 0.1, 0.01, 0.001], 'kernel': ['linear', 'rbf', 'poly']},\n",
+    "    ]\n",
+    "\n",
+    "    grid = GridSearchCV(svm.SVC(), param_grid, cv=5)\n",
+    "    grid.fit(x_train, y_train)\n",
+    "\n",
+    "    # Predição\n",
+    "    y_pred = grid.predict(x_test)\n",
+    "    current_acc = metrics.accuracy_score(y_test, y_pred)\n",
+    "\n",
+    "    if current_acc > best_acc:\n",
+    "        best_acc = current_acc\n",
+    "        best_params = grid.best_params_\n",
+    "\n",
+    "print(\"Best accuracy:\", best_acc)\n",
+    "print(\"Best parameters:\", best_params)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Classificação utilizando validaçãp cruzada"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Acurácia média: 28.90%\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.model_selection import StratifiedKFold\n",
+    "\n",
+    "# Dividindo os dados normalizados em 4 conjuntos (folds) para validação cruzada\n",
+    "cv = StratifiedKFold(n_splits=4)\n",
+    "\n",
+    "# Lista para armazenar as acurácias para cada fold\n",
+    "acc_scores = []\n",
+    "\n",
+    "# Loop pelos folds\n",
+    "for train_idx, test_idx in cv.split(X, y):\n",
+    "    # Divida os dados normalizados em conjunto de treinamento e conjunto de teste para este fold\n",
+    "    X_train, X_test = X[train_idx], X[test_idx]\n",
+    "    y_train, y_test = y[train_idx], y[test_idx]\n",
+    "\n",
+    "    # Treine o modelo SVM no conjunto de treinamento\n",
+    "    svm_model.fit(X_train, y_train)\n",
+    "\n",
+    "    # Faça previsões no conjunto de teste\n",
+    "    y_pred = svm_model.predict(X_test)\n",
+    "\n",
+    "    # Calcule a acurácia do modelo para este fold\n",
+    "    fold_accuracy = accuracy_score(y_test, y_pred)\n",
+    "\n",
+    "    # Armazene a acurácia deste fold na lista\n",
+    "    acc_scores.append(fold_accuracy)\n",
+    "\n",
+    "mean_acc = np.mean(acc_scores)\n",
+    "\n",
+    "# Imprima a média\n",
+    "print(f\"Acurácia média: {mean_acc:.2%}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Classificação com RFE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Acurácia: 29.73%\n"
      ]
     }
    ],
