--- a/EOG/protocol.ipynb
+++ b/EOG/protocol.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## análise de sinais de eletrooculografia (EOG)\n",
+    "## Análise de sinais de eletrooculografia (EOG)\n",
     "\n",
     "Algumas etapas para o reconhecimento de padrões em sinais EOG são necessárias (e parecidas com outros sinais EXG). Estes são apresentadas a seguir.\n",
     "\n",
