--- a/EOG/prepare.ipynb
+++ b/EOG/prepare.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +18,7 @@
        "((28, 1000, 4), (28, 1000, 4))"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
        "(2, 28, 2, 1000)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -167,27 +167,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Corte dos dados\n",
-    "data = filtered_data[:, :, :, 150:800] "
+    "#data = filtered_data[:, :, :, 150:800] #p1: 0.34 e p2: 0.35\n",
+    "data = filtered_data[:, :, :, 200:400] #p1: 0.39 e 0.35"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " (2, 28, 2, 650)\n",
+      " (2, 28, 2, 200)\n",
       "Formato (shape) dos dados depois da divisão de janelas\n",
-      "Dominio do tempo: (2, 28, 2, 22, 64) - (classes+ensaios, canais, janelas, linhas)\n",
-      "Dominio da frequência:  (2, 28, 2, 22, 33) - (classes+ensaios, canais, janelas, linhas)\n"
+      "Dominio do tempo: (2, 28, 2, 8, 64) - (classes+ensaios, canais, janelas, linhas)\n",
+      "Dominio da frequência:  (2, 28, 2, 8, 33) - (classes+ensaios, canais, janelas, linhas)\n"
      ]
     }
    ],
@@ -226,15 +227,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(28, 2, 22, 33) (28, 2, 22, 33)\n",
-      "(28, 2, 22, 64) (28, 2, 22, 64)\n"
+      "(28, 2, 8, 33) (28, 2, 8, 33)\n",
+      "(28, 2, 8, 64) (28, 2, 8, 64)\n"
      ]
     }
    ],
