--- a/EOG/validation.ipynb
+++ b/EOG/validation.ipynb
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,15 +199,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape dos vetores orinais (28, 2, 8, 64) (28, 2, 8, 33)\n",
-      "(28, 2, 8) (28, 2, 8) (28, 2, 8) (28, 2, 8) (28, 2, 8) (28, 2, 8) (28, 2, 8) (28, 2, 8) (28, 2, 8)\n"
+      "Shape dos vetores orinais (28, 2, 6, 64) (28, 2, 6, 33)\n",
+      "(28, 2, 6) (28, 2, 6) (28, 2, 6) (28, 2, 6) (28, 2, 6) (28, 2, 6) (28, 2, 6) (28, 2, 6) (28, 2, 6)\n"
      ]
     }
    ],
@@ -236,16 +236,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(9, 28, 2, 8)"
+       "(9, 28, 2, 6)"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 170,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,16 +259,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(224, 18)"
+       "(168, 18)"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 171,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,14 +340,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Acurácia do modelo: 26.67%\n"
+      "Acurácia do modelo: 44.12%\n"
      ]
     }
    ],
@@ -369,7 +369,7 @@
     "\n",
     "# Avaliando o modelo (opcional)\n",
     "accuracy = svm_model.score(X_test, y_test)\n",
-    "print(f'Acurácia do modelo: {accuracy * 100:.2f}%')"
+    "print(f'Acurácia do modelo: {accuracy* 100:.2f}%')"
    ]
   },
   {
@@ -381,15 +381,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best accuracy: 0.39285714285714285\n",
-      "Best parameters: {'C': 10, 'gamma': 1, 'kernel': 'poly'}\n"
+      "Best accuracy: 45.24%\n",
+      "Best parameters: {'C': 100, 'gamma': 0.1, 'kernel': 'rbf'}\n"
      ]
     }
    ],
@@ -429,7 +429,7 @@
     "        best_acc = current_acc\n",
     "        best_params = grid.best_params_\n",
     "\n",
-    "print(\"Best accuracy:\", best_acc)\n",
+    "print(f'Best accuracy: {best_acc* 100:.2f}%')\n",
     "print(\"Best parameters:\", best_params)\n"
    ]
   },
@@ -442,14 +442,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Acurácia média: 19.64%\n"
+      "Acurácia média: 29.17%\n"
      ]
     }
    ],
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
@@ -529,15 +529,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape dos vetores orinais (28, 2, 8, 64) (28, 2, 8, 33)\n",
-      "(28, 2, 8) (28, 2, 8) (28, 2, 8) (28, 2, 8) (28, 2, 8) (28, 2, 8) (28, 2, 8) (28, 2, 8) (28, 2, 8)\n"
+      "Shape dos vetores orinais (28, 2, 6, 64) (28, 2, 6, 33)\n",
+      "(28, 2, 6) (28, 2, 6) (28, 2, 6) (28, 2, 6) (28, 2, 6) (28, 2, 6) (28, 2, 6) (28, 2, 6) (28, 2, 6)\n"
      ]
     }
    ],
@@ -566,16 +566,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(9, 28, 2, 8)"
+       "(9, 28, 2, 6)"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 179,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,16 +589,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(224, 18)"
+       "(168, 18)"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 180,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -670,14 +670,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Acurácia do modelo: 33.33%\n"
+      "Acurácia do modelo: 32.35%\n"
      ]
     }
    ],
@@ -711,15 +711,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best accuracy: 0.35714285714285715\n",
-      "Best parameters: {'C': 100, 'gamma': 1, 'kernel': 'rbf'}\n"
+      "Best accuracy: 45.24%\n",
+      "Best parameters: {'C': 10, 'gamma': 1, 'kernel': 'rbf'}\n"
      ]
     }
    ],
@@ -759,7 +759,7 @@
     "        best_acc = current_acc\n",
     "        best_params = grid.best_params_\n",
     "\n",
-    "print(\"Best accuracy:\", best_acc)\n",
+    "print(f'Best accuracy: {best_acc* 100:.2f}%')\n",
     "print(\"Best parameters:\", best_params)\n"
    ]
   },
@@ -767,19 +767,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Classificação utilizando validaçãp cruzada"
+    "#### Classificação utilizando validação cruzada"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Acurácia média: 23.21%\n"
+      "Acurácia média: 36.31%\n"
      ]
     }
    ],
@@ -826,14 +826,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Acurácia: 23.53%\n"
+      "Acurácia: 27.45%\n"
      ]
     }
    ],
