--- a/EOG/prepare.ipynb
+++ b/EOG/prepare.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +18,7 @@
        "((28, 1000, 4), (28, 1000, 4))"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
        "(2, 28, 2, 1000)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -167,28 +167,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Corte dos dados\n",
     "#data = filtered_data[:, :, :, 150:800] #p1: 0.34 e p2: 0.35\n",
-    "data = filtered_data[:, :, :, 200:400] #p1: 0.39 e 0.35"
+    "#data = filtered_data[:, :, :, 200:400] #p1: 0.39 e 0.35\n",
+    "data = filtered_data[:, :, :, 150:300] #p1: 0.45 e 0.45"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " (2, 28, 2, 200)\n",
+      " (2, 28, 2, 150)\n",
       "Formato (shape) dos dados depois da divisão de janelas\n",
-      "Dominio do tempo: (2, 28, 2, 8, 64) - (classes+ensaios, canais, janelas, linhas)\n",
-      "Dominio da frequência:  (2, 28, 2, 8, 33) - (classes+ensaios, canais, janelas, linhas)\n"
+      "Dominio do tempo: (2, 28, 2, 6, 64) - (classes+ensaios, canais, janelas, linhas)\n",
+      "Dominio da frequência:  (2, 28, 2, 6, 33) - (classes+ensaios, canais, janelas, linhas)\n"
      ]
     }
    ],
@@ -227,15 +228,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(28, 2, 8, 33) (28, 2, 8, 33)\n",
-      "(28, 2, 8, 64) (28, 2, 8, 64)\n"
+      "(28, 2, 6, 33) (28, 2, 6, 33)\n",
+      "(28, 2, 6, 64) (28, 2, 6, 64)\n"
      ]
     }
    ],
