--- a/EOG/prepare.ipynb
+++ b/EOG/prepare.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +18,7 @@
        "((28, 1000, 4), (28, 1000, 4))"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
        "(2, 28, 2, 1000)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -167,29 +167,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Corte dos dados\n",
     "#data = filtered_data[:, :, :, 150:800] #p1: 0.34 e p2: 0.35\n",
-    "#data = filtered_data[:, :, :, 200:400] #p1: 0.39 e 0.35\n",
-    "data = filtered_data[:, :, :, 150:300] #p1: 0.45 e 0.45"
+    "#data = filtered_data[:, :, :, 200:400] #p1: 0.39 e p2: 0.35\n",
+    "#data = filtered_data[:, :, :, 150:300] #p1: 0.45 e p2: 0.45\n",
+    "data = filtered_data[:, :, :, 700:1000] #p1: 0.67 e p2: 0.50"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " (2, 28, 2, 150)\n",
+      " (2, 28, 2, 300)\n",
       "Formato (shape) dos dados depois da divisão de janelas\n",
-      "Dominio do tempo: (2, 28, 2, 6, 64) - (classes+ensaios, canais, janelas, linhas)\n",
-      "Dominio da frequência:  (2, 28, 2, 6, 33) - (classes+ensaios, canais, janelas, linhas)\n"
+      "Dominio do tempo: (2, 28, 2, 11, 64) - (classes+ensaios, canais, janelas, linhas)\n",
+      "Dominio da frequência:  (2, 28, 2, 11, 33) - (classes+ensaios, canais, janelas, linhas)\n"
      ]
     }
    ],
@@ -228,15 +229,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(28, 2, 6, 33) (28, 2, 6, 33)\n",
-      "(28, 2, 6, 64) (28, 2, 6, 64)\n"
+      "(28, 2, 11, 33) (28, 2, 11, 33)\n",
+      "(28, 2, 11, 64) (28, 2, 11, 64)\n"
      ]
     }
    ],
