--- a/EOG/validation.ipynb
+++ b/EOG/validation.ipynb
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,15 +199,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape dos vetores orinais (28, 2, 6, 64) (28, 2, 6, 33)\n",
-      "(28, 2, 6) (28, 2, 6) (28, 2, 6) (28, 2, 6) (28, 2, 6) (28, 2, 6) (28, 2, 6) (28, 2, 6) (28, 2, 6)\n"
+      "Shape dos vetores orinais (28, 2, 11, 64) (28, 2, 11, 33)\n",
+      "(28, 2, 11) (28, 2, 11) (28, 2, 11) (28, 2, 11) (28, 2, 11) (28, 2, 11) (28, 2, 11) (28, 2, 11) (28, 2, 11)\n"
      ]
     }
    ],
@@ -236,16 +236,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(9, 28, 2, 6)"
+       "(9, 28, 2, 11)"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 189,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,16 +259,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(168, 18)"
+       "(308, 18)"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 190,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,14 +340,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Acurácia do modelo: 44.12%\n"
+      "Acurácia do modelo: 48.39%\n"
      ]
     }
    ],
@@ -381,15 +381,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best accuracy: 45.24%\n",
-      "Best parameters: {'C': 100, 'gamma': 0.1, 'kernel': 'rbf'}\n"
+      "Best accuracy: 67.53%\n",
+      "Best parameters: {'C': 100, 'gamma': 1, 'kernel': 'rbf'}\n"
      ]
     }
    ],
@@ -442,14 +442,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Acurácia média: 29.17%\n"
+      "Acurácia média: 44.16%\n"
      ]
     }
    ],
@@ -496,14 +496,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Acurácia: 29.41%\n"
+      "Acurácia: 46.24%\n"
      ]
     }
    ],
@@ -529,15 +529,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape dos vetores orinais (28, 2, 6, 64) (28, 2, 6, 33)\n",
-      "(28, 2, 6) (28, 2, 6) (28, 2, 6) (28, 2, 6) (28, 2, 6) (28, 2, 6) (28, 2, 6) (28, 2, 6) (28, 2, 6)\n"
+      "Shape dos vetores orinais (28, 2, 11, 64) (28, 2, 11, 33)\n",
+      "(28, 2, 11) (28, 2, 11) (28, 2, 11) (28, 2, 11) (28, 2, 11) (28, 2, 11) (28, 2, 11) (28, 2, 11) (28, 2, 11)\n"
      ]
     }
    ],
@@ -566,16 +566,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(9, 28, 2, 6)"
+       "(9, 28, 2, 11)"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 198,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,16 +589,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(168, 18)"
+       "(308, 18)"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 199,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -670,14 +670,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Acurácia do modelo: 32.35%\n"
+      "Acurácia do modelo: 41.94%\n"
      ]
     }
    ],
@@ -711,15 +711,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best accuracy: 45.24%\n",
-      "Best parameters: {'C': 10, 'gamma': 1, 'kernel': 'rbf'}\n"
+      "Best accuracy: 48.05%\n",
+      "Best parameters: {'C': 10, 'kernel': 'linear'}\n"
      ]
     }
    ],
@@ -772,14 +772,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Acurácia média: 36.31%\n"
+      "Acurácia média: 50.97%\n"
      ]
     }
    ],
@@ -826,14 +826,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Acurácia: 27.45%\n"
+      "Acurácia: 46.24%\n"
      ]
     }
    ],
